resources/css/style.css
* {
  text-align: center;
  font-family: Helvetica;
}

h1 {
  font-size: 70px;
  font-weight: bold;
}
nav {
  font-size: 18px;
  color: white;
}

h2 {
  font-size: 32px;
  font-weight: bold;
  color: black;
}

h3 {
  font-size: 23px;
  font-weight: bold;
  color: black;
}

p {
  font-size: 14px;
  color: black;
}

a {
  color: white;
}

footer a {
  text-align: left;
}

.footwhite {
  color: white;
  text-align: left;
  font-size: 11px;
}

.gray {
  background-color: dimgray;
}

